# whispermlx-server

./: Makefile  README.md  pyproject.toml
.cursor/rules/rules/: ponytail.mdc  python.mdc  roadmap.mdc
src/whispermlx_server/: __init__.py  __main__.py  app.py  config.py  download.py  inference.py  model_catalog.py  models.py
tests/: test_app.py  test_config.py  test_download.py  test_inference.py  test_model_catalog.py  test_models.py
