[project]
name = "whispermlx-server"
version = "0.1.0"
description = "Local HTTP wrapper around whispermlx CLI for Minuteman"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi>=0.115.0",
    "loguru>=0.7.0",
    "uvicorn>=0.32.0",
    "whispermlx>=3.12.0",
]

[project.optional-dependencies]

[project.scripts]
whispermlx-server = "whispermlx_server.__main__:main"

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "mypy>=1.14.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whispermlx_server"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.uv]
override-dependencies = [
    "numba>=0.58.1",
    "llvmlite>=0.41.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
packages = ["whispermlx_server"]
